Fix textwrap on welcome

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -1,7 +1,7 @@
 @css {
   /*Global styling*/
-  .dark-gray-font { color: #575757 }
-  .orange-font { color: #FF906A }
+  .dark-gray-font { color: #575757; }
+  .orange-font { color: #FF906A; }
   .heavy-font-size {
     font-family: "Futura PT W01 Medium";
     font-size: 18px;
@@ -36,10 +36,7 @@
     }
   }
 
-  .logout-nav > li > .navbar-welcome {
-    padding-right: 7%;
-    width: 100%;
-  }
+  .logout-nav > li > .navbar-welcome { padding-right: 7%; }
 
   .leo-logo-gray { font-family: "Futura PT W01 Book" }
 
